fix rtCLDCleaner bugs. sh exec_test.sh java/lang/invoke/defineHiddenClass/UnloadingTest