@@ -39,40 +39,41 @@
 # sh exec_test.sh jdk/jshell/AnalyzeSnippetTest
 # sh exec_test.sh runtime/modules/ModulesSymLink
 # sh exec_test.sh jdk/jshell/ToolLocalSimpleTest
+# sh exec_test.sh runtime/ClassUnload/DictionaryDependsTest
+# sh exec_test.sh java/lang/invoke/defineHiddenClass/UnloadingTest
 
-pushd /Users/zeedh/slowcoders/jdk-rtgc/build/macosx-x86_64-client-fastdebug/test-support/jtreg_test_langtools_jdk_jshell_ToolLocalSimpleTest_java/scratch/0 && \
+
+pushd /Users/zeedh/slowcoders/jdk-rtgc/build/macosx-x86_64-client-fastdebug/test-support/jtreg_test_jdk_java_lang_invoke_defineHiddenClass_UnloadingTest_java/scratch/0 && \
 HOME=/Users/zeedh \
 JDK8_HOME=/Library/Java/JavaVirtualMachines/adoptopenjdk-16.jdk/Contents/Home \
 LANG=en_US.UTF-8 \
 LC_ALL=C \
 PATH=/bin:/usr/bin:/usr/sbin \
 TEST_IMAGE_DIR=/Users/zeedh/slowcoders/jdk-rtgc/build/macosx-x86_64-client-fastdebug/images/test \
-CLASSPATH=/Users/zeedh/slowcoders/jdk-rtgc/build/macosx-x86_64-client-fastdebug/test-support/jtreg_test_langtools_jdk_jshell_ToolLocalSimpleTest_java/classes/0/jdk/jshell/ToolLocalSimpleTest.d:/Users/zeedh/slowcoders/jdk-rtgc/test/langtools/jdk/jshell:/Users/zeedh/slowcoders/jdk-rtgc/jtreg-6.1/lib/testng.jar:/Users/zeedh/slowcoders/jdk-rtgc/jtreg-6.1/lib/jcommander.jar:/Users/zeedh/slowcoders/jdk-rtgc/jtreg-6.1/lib/guice.jar:/Users/zeedh/slowcoders/jdk-rtgc/jtreg-6.1/lib/javatest.jar:/Users/zeedh/slowcoders/jdk-rtgc/jtreg-6.1/lib/jtreg.jar \
+CLASSPATH=/Users/zeedh/slowcoders/jdk-rtgc/build/macosx-x86_64-client-fastdebug/test-support/jtreg_test_jdk_java_lang_invoke_defineHiddenClass_UnloadingTest_java/classes/0/java/lang/invoke/defineHiddenClass/UnloadingTest.d:/Users/zeedh/slowcoders/jdk-rtgc/test/jdk/java/lang/invoke/defineHiddenClass:/Users/zeedh/slowcoders/jdk-rtgc/build/macosx-x86_64-client-fastdebug/test-support/jtreg_test_jdk_java_lang_invoke_defineHiddenClass_UnloadingTest_java/classes/0/test/lib:/Users/zeedh/slowcoders/jdk-rtgc/test/lib:/Users/zeedh/slowcoders/jdk-rtgc/jtreg-6.1/lib/testng.jar:/Users/zeedh/slowcoders/jdk-rtgc/jtreg-6.1/lib/jcommander.jar:/Users/zeedh/slowcoders/jdk-rtgc/jtreg-6.1/lib/guice.jar:/Users/zeedh/slowcoders/jdk-rtgc/jtreg-6.1/lib/javatest.jar:/Users/zeedh/slowcoders/jdk-rtgc/jtreg-6.1/lib/jtreg.jar \
     /Users/zeedh/slowcoders/jdk-rtgc/build/macosx-x86_64-client-fastdebug/images/jdk/bin/java \
-        -Dtest.vm.opts='-Xmx768m -XX:MaxRAMPercentage=6.25 -Djava.io.tmpdir=/Users/zeedh/slowcoders/jdk-rtgc/build/macosx-x86_64-client-fastdebug/test-support/jtreg_test_langtools_jdk_jshell_ToolLocalSimpleTest_java/tmp -ea -esa' \
-        -Dtest.tool.vm.opts='-J-Xmx768m -J-XX:MaxRAMPercentage=6.25 -J-Djava.io.tmpdir=/Users/zeedh/slowcoders/jdk-rtgc/build/macosx-x86_64-client-fastdebug/test-support/jtreg_test_langtools_jdk_jshell_ToolLocalSimpleTest_java/tmp -J-ea -J-esa' \
+        -Dtest.vm.opts='-Xmx768m -XX:MaxRAMPercentage=6.25 -Djava.io.tmpdir=/Users/zeedh/slowcoders/jdk-rtgc/build/macosx-x86_64-client-fastdebug/test-support/jtreg_test_jdk_java_lang_invoke_defineHiddenClass_UnloadingTest_java/tmp -ea -esa' \
+        -Dtest.tool.vm.opts='-J-Xmx768m -J-XX:MaxRAMPercentage=6.25 -J-Djava.io.tmpdir=/Users/zeedh/slowcoders/jdk-rtgc/build/macosx-x86_64-client-fastdebug/test-support/jtreg_test_jdk_java_lang_invoke_defineHiddenClass_UnloadingTest_java/tmp -J-ea -J-esa' \
         -Dtest.compiler.opts= \
         -Dtest.java.opts= \
         -Dtest.jdk=/Users/zeedh/slowcoders/jdk-rtgc/build/macosx-x86_64-client-fastdebug/images/jdk \
         -Dcompile.jdk=/Users/zeedh/slowcoders/jdk-rtgc/build/macosx-x86_64-client-fastdebug/images/jdk \
         -Dtest.timeout.factor=4.0 \
-        -Dtest.root=/Users/zeedh/slowcoders/jdk-rtgc/test/langtools \
-        -Dtest.name=jdk/jshell/ToolLocalSimpleTest.java \
-        -Dtest.file=/Users/zeedh/slowcoders/jdk-rtgc/test/langtools/jdk/jshell/ToolLocalSimpleTest.java \
-        -Dtest.src=/Users/zeedh/slowcoders/jdk-rtgc/test/langtools/jdk/jshell \
-        -Dtest.src.path=/Users/zeedh/slowcoders/jdk-rtgc/test/langtools/jdk/jshell \
-        -Dtest.classes=/Users/zeedh/slowcoders/jdk-rtgc/build/macosx-x86_64-client-fastdebug/test-support/jtreg_test_langtools_jdk_jshell_ToolLocalSimpleTest_java/classes/0/jdk/jshell/ToolLocalSimpleTest.d \
-        -Dtest.class.path=/Users/zeedh/slowcoders/jdk-rtgc/build/macosx-x86_64-client-fastdebug/test-support/jtreg_test_langtools_jdk_jshell_ToolLocalSimpleTest_java/classes/0/jdk/jshell/ToolLocalSimpleTest.d \
-        -Dtest.class.path.prefix=/Users/zeedh/slowcoders/jdk-rtgc/build/macosx-x86_64-client-fastdebug/test-support/jtreg_test_langtools_jdk_jshell_ToolLocalSimpleTest_java/classes/0/jdk/jshell/ToolLocalSimpleTest.d:/Users/zeedh/slowcoders/jdk-rtgc/test/langtools/jdk/jshell \
-        -Dtest.modules='jdk.compiler/com.sun.tools.javac.api jdk.compiler/com.sun.tools.javac.main jdk.jdeps/com.sun.tools.javap jdk.jshell/jdk.internal.jshell.tool' \
-        --add-modules jdk.compiler,jdk.jdeps,jdk.jshell \
-        --add-exports jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED \
-        --add-exports jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED \
-        --add-exports jdk.jdeps/com.sun.tools.javap=ALL-UNNAMED \
-        --add-exports jdk.jshell/jdk.internal.jshell.tool=ALL-UNNAMED \
+        -Dtest.nativepath=/Users/zeedh/slowcoders/jdk-rtgc/build/macosx-x86_64-client-fastdebug/images/test/jdk/jtreg/native \
+        -Dtest.root=/Users/zeedh/slowcoders/jdk-rtgc/test/jdk \
+        -Dtest.name=java/lang/invoke/defineHiddenClass/UnloadingTest.java \
+        -Dtest.file=/Users/zeedh/slowcoders/jdk-rtgc/test/jdk/java/lang/invoke/defineHiddenClass/UnloadingTest.java \
+        -Dtest.src=/Users/zeedh/slowcoders/jdk-rtgc/test/jdk/java/lang/invoke/defineHiddenClass \
+        -Dtest.src.path=/Users/zeedh/slowcoders/jdk-rtgc/test/jdk/java/lang/invoke/defineHiddenClass:/Users/zeedh/slowcoders/jdk-rtgc/test/lib \
+        -Dtest.classes=/Users/zeedh/slowcoders/jdk-rtgc/build/macosx-x86_64-client-fastdebug/test-support/jtreg_test_jdk_java_lang_invoke_defineHiddenClass_UnloadingTest_java/classes/0/java/lang/invoke/defineHiddenClass/UnloadingTest.d \
+        -Dtest.class.path=/Users/zeedh/slowcoders/jdk-rtgc/build/macosx-x86_64-client-fastdebug/test-support/jtreg_test_jdk_java_lang_invoke_defineHiddenClass_UnloadingTest_java/classes/0/java/lang/invoke/defineHiddenClass/UnloadingTest.d:/Users/zeedh/slowcoders/jdk-rtgc/build/macosx-x86_64-client-fastdebug/test-support/jtreg_test_jdk_java_lang_invoke_defineHiddenClass_UnloadingTest_java/classes/0/test/lib \
+        -Dtest.class.path.prefix=/Users/zeedh/slowcoders/jdk-rtgc/build/macosx-x86_64-client-fastdebug/test-support/jtreg_test_jdk_java_lang_invoke_defineHiddenClass_UnloadingTest_java/classes/0/java/lang/invoke/defineHiddenClass/UnloadingTest.d:/Users/zeedh/slowcoders/jdk-rtgc/test/jdk/java/lang/invoke/defineHiddenClass:/Users/zeedh/slowcoders/jdk-rtgc/build/macosx-x86_64-client-fastdebug/test-support/jtreg_test_jdk_java_lang_invoke_defineHiddenClass_UnloadingTest_java/classes/0/test/lib \
+        -Dtest.modules=jdk.compiler \
+        --add-modules jdk.compiler \
         -Xmx768m \
         -XX:MaxRAMPercentage=6.25 \
-        -Djava.io.tmpdir=/Users/zeedh/slowcoders/jdk-rtgc/build/macosx-x86_64-client-fastdebug/test-support/jtreg_test_langtools_jdk_jshell_ToolLocalSimpleTest_java/tmp \
+        -Djava.io.tmpdir=/Users/zeedh/slowcoders/jdk-rtgc/build/macosx-x86_64-client-fastdebug/test-support/jtreg_test_jdk_java_lang_invoke_defineHiddenClass_UnloadingTest_java/tmp \
         -ea \
         -esa \
-        com.sun.javatest.regtest.agent.MainWrapper /Users/zeedh/slowcoders/jdk-rtgc/build/macosx-x86_64-client-fastdebug/test-support/jtreg_test_langtools_jdk_jshell_ToolLocalSimpleTest_java/jdk/jshell/ToolLocalSimpleTest.d/testng.0.jta jdk/jshell/ToolLocalSimpleTest.java false ToolLocalSimpleTest
+        -Djava.library.path=/Users/zeedh/slowcoders/jdk-rtgc/build/macosx-x86_64-client-fastdebug/images/test/jdk/jtreg/native \
+        com.sun.javatest.regtest.agent.MainWrapper /Users/zeedh/slowcoders/jdk-rtgc/build/macosx-x86_64-client-fastdebug/test-support/jtreg_test_jdk_java_lang_invoke_defineHiddenClass_UnloadingTest_java/java/lang/invoke/defineHiddenClass/UnloadingTest.d/testng.0.jta java/lang/invoke/defineHiddenClass/UnloadingTest.java false UnloadingTest
